--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EdicionActivity"></activity>
+        <activity android:name=".EdicionActivity" />
         <activity android:name=".RevistasActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
